<resources>
    <string name="app_name">CodeBox</string>
    <string name="add">Add</string>
    <string name="search">Search</string>
    <string name="delete">Delete All records</string>
    <string name="exit">Exit</string>
    <string name="export">Export All records</string>
    <string name="webelement">Website or Name</string>
    <string name="username">Username or User id</string>
    <string name="password">Password or Pin number</string>
    <string name="save_record">Save</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_set_authorization">SetAuthorization</string>
</resources>
